--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -2,24 +2,28 @@
 <device name="Android">
     <item name="none">0</item>
     <item name="screen.on">53</item>
-    <item name="screen.full">206</item>
-    <item name="bluetooth.active">177</item>
-    <item name="bluetooth.on">0.7</item>
-    <item name="wifi.on">0.9</item>
-    <item name="wifi.active">45</item>
-    <item name="wifi.scan">138</item>
+    <item name="screen.full">217</item>
+    <item name="bluetooth.active">35</item>
+    <item name="bluetooth.on">1</item>
+    <item name="wifi.on">1</item>
+    <item name="wifi.active">100</item>
+    <item name="wifi.scan">20</item>
     <item name="dsp.audio">46.1</item>
     <item name="dsp.video">93.2</item>
-    <item name="camera.avg">354</item>
-    <item name="camera.flashlight">572</item>
-    <item name="gps.on">38.4</item>
-    <item name="radio.active">149</item>
-    <item name="radio.scanning">300</item>
+    <item name="camera.avg">170</item>
+    <item name="camera.flashlight">160</item>
+    <item name="gps.on">113</item>
+    <item name="radio.active">60</item>
+    <item name="radio.scanning">28</item>
     <array name="radio.on">
-        <value>18</value>
-        <value>4</value>
+        <value>26</value>
+        <value>20</value>
+        <value>15</value>
+        <value>10</value>
+        <value>5</value>
+        <value>1.4</value>
     </array>
-    <array name="cpu.speeds.cluster0">
+    <array name="cpu.core_speeds.cluster0">
         <value>200000</value>
         <value>345600</value>
         <value>400000</value>
@@ -30,7 +34,7 @@
         <value>1344000</value>
         <value>1459200</value>
     </array>
-    <array name="cpu.speeds.cluster1">
+    <array name="cpu.core_speeds.cluster1">
         <value>200000</value>
         <value>249600</value>
         <value>499200</value>
@@ -38,9 +42,9 @@
         <value>998400</value>
         <value>1113600</value>
     </array>
-    <item name="cpu.idle">3.45</item>
-    <item name="cpu.awake">16</item>
-    <array name="cpu.active.cluster0">
+    <item name="cpu.idle">3</item>
+    <item name="cpu.active">16</item>
+    <array name="cpu.core_power.cluster0">
         <value>57.5</value>
         <value>71.2</value>
         <value>74.9</value>
@@ -51,7 +55,7 @@
         <value>254.1</value>
         <value>280.1</value>
     </array>
-    <array name="cpu.active.cluster1">
+    <array name="cpu.core_power.cluster1">
         <value>18.6</value>
         <value>22.8</value>
         <value>43.5</value>
